# competitive-analysis

./: .gitignore  README.md  pyproject.toml
examples/competitive-intel/: ai-builds-watchlist.yaml  ai-live-sources.json
rca/: rca-heartbeat-env-test-isolation-2026-07-01.md
scripts/: install_morning_heartbeat.sh  run_morning.sh
src/kipi_mcp/: competitive_intel.py
tests/: conftest.py  test_competitive_intel.py  test_morning_heartbeat.py
webapp/: package-lock.json  package.json
webapp/app/: globals.css  layout.jsx  page.jsx
