[project]
name = "competitive-analysis"
version = "0.1.0"
description = "Runnable competitive intelligence workflow for AI market signals"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-asyncio"]

[project.scripts]
competitive-analysis = "kipi_mcp.competitive_intel:main"
kipi-competitive-intel = "kipi_mcp.competitive_intel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kipi_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
